styles/skills/styles.css
@import "progressbar.css";


#skills {
    display: grid;

    grid-template-columns: repeat(4, 1fr);

    grid-template-areas: "html5 css3 ux_ui coaching";

    grid-gap: 15%;

    margin: 0 2.5% 20% 2.5%;
}


#skills p {
    text-align: center;
    font-size: 1rem;
}


@media (max-width: 768px) {
    #skills {
        grid-template-rows: repeat(4, 1fr);
        grid-template-columns: repeat(3, 1fr);
        grid-template-areas:
                ". html5 ."
                ". css3 ."
                ". ux_ui ."
                ". coaching .";
    }
}

